--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,6 @@
 <div class="booyah-box col-10 offset-1">
-  <h1 class="text-center"><%= @course.title %></h1>
 
+  <h1 class="text-center"><%= @course.title %></h1>
   <br />
   
   <div class="text-center">
@@ -11,67 +11,93 @@
 
   <br /><br />
     
-    <div class="row">
-      
-      <div class="col-sm-2 col-12 text-center">
-        <span class="badge badge-default">
-          TUITION: <%= number_to_currency @course.cost %>
-        </span>
-        <% if current_user && current_user == @course.user %>
-        <br /><br /> 
-        <p><%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %></p>
-        <% end %>
+  <div class="col-10 offset-1">
+    <div class="row">  
+      <div class="col-12 col-sm-2">  
+        <h5><span class="badge badge-success">
+          COST: <%= number_to_currency @course.cost %>
+        </span></h5>
+        <br />
 
         <% if current_user %>
-        <% if current_user.enrolled_in?(@course) %>
-          <h3 class="badge badge-info">You Are Enrolled!</h3>
-        <% else %>
-        <% if @course.free? %>
-        <%= link_to 'Enroll Now', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
-        <% else %>
-        <br /><br />
-        <%= form_tag course_enrollments_path(@course) do %>
-          <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                  data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                  data-email="<%= current_user.email %>"
-                  data-description="Now You Cook! - <%= @course.title %> (<%= number_to_currency @course.cost %>)"
-                  data-amount="<%= (@course.cost * 100).to_i %>"
-                  data-locale="auto"></script>
+          <% if current_user.enrolled_in?(@course) %>
+            <h3 class="btn btn-success btn-sm">You Are Enrolled!</h3>
+          
+          <% else %>
+          
+            <% if @course.free? %>
+              <%= link_to 'Enroll Now!', course_enrollments_path(@course), class: 'btn btn-primary btn-sm', method: :post %>
+          
+            <% else %>
+          
+              <%= form_tag course_enrollments_path(@course) do %>
+                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                    data-email="<%= current_user.email %>"
+                    data-description="Now You Cook! - <%= @course.title %> (<%= number_to_currency @course.cost %>)"
+                    data-amount="<%= (@course.cost * 100).to_i %>"
+                    data-locale="auto">
+                </script>
+                <br /><br />
+              <% end %>
+            <% end %>
           <% end %>
-        <% end %>
-        <% end %>
+        
         <% else %>
-        <h3 class="badge badge-info">Sign In To Enroll!</h3>
+          
+          <h3 class="btn btn-info">Sign In To Enroll!</h3>
+
+        <% end %>
+
+        <% if current_user && current_user == @course.user %> 
+          <p>
+            <%= link_to 'Administer<br />Course'.html_safe, instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
+          </p>
         <% end %>
       </div>
-      
-      <div class="col-sm-10 col-12 float-right">
+        
+      <div class="col-12 col-sm-10">
         <%= @course.description %>
+        
+        <br /><br />
+        
+        <strong>COURSE INSTRUCTOR: <%= @course.user.fullname %></strong>
       </div>
-      
+        
       <div class="col-12">
         <% @course.sections.rank(:row_order).each do |section| %>
+        
         <br /><br />
-          <div class="section">
-          <h3>
+        
+        <div class="section">
+          <h3 class="text-center">
             <%= section.title %>
           </h3>
+          
           <div class="row">
             <% section.lessons.rank(:row_order).each do |lesson| %>
-                <div class="col-12 col-sm-6">
-                  <div class="lesson text-center">
+              <div class="col-12 col-sm-6">
+                <div class="lesson text-center">
+                
+                <br />
+                  
+                  <%= link_to lesson_path(lesson) do %>
+                    <strong><%= lesson.title %></strong>
+                    
                     <br />
-                    <%= link_to lesson_path(lesson) do %>
-                      <strong><%= lesson.title %></strong>
-                      <br />
-                      <%= lesson.subtitle %>
-                    <% end %>
-                  </div>
+                    
+                    <%= lesson.subtitle %>
+                  <% end %>
                 </div>
+              </div>
             <% end %>
           </div>
+
           <br class="clr" />
-          </div>
+        </div>
         <% end %>
       </div>
+
     </div>
+  </div>
+</div>
