--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,20 +62,13 @@
           <%= link_to 'Teach A Course', new_instructor_course_path %>
           <br />
           <%= link_to 'My Dashboard', dashboard_path %>
-          </div>
-
-          <div class="col-12 col-sm">
-          <h4>About</h4>
-          <%= link_to 'Team', '#' %>
-          <br />
-          <%= link_to 'Careers', '#' %>
           <br />
           <%= link_to 'Privacy Policy', privacy_path %>
           </div>
 
           <div class="col-12 col-sm">
           <h4>Contact</h4>
-          atim@gmx.com
+          info@nowyoucook.com
           <br />
           Silver Spring MD, 20904
           </div>
