--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,25 +1,31 @@
 <div class="hero">
   <div class="frosty col-10 offset-1 text-center">
     <h1>Learn to Cook the Most DELICIOUS Food!</h1>
-    <h3><em>-- Atim Udoh (Global Chef)</em></h3>
+    <h3>Cuisine From Around The Globe</h3>
     <br />
     <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
   </div>
 </div>
 
  <div class="row text-center feature">
-    <div class="col-12 col-sm">
+    <div class="col-12 col-md">
+      <i class="fa fa-tv fa-4x icon"></i>
       <h3>Easy-to-Follow Videos</h3>
       <p>Learn to cook at your own pace from world-renowned chefs at the top of their game!</p>
+      <br /><br />
     </div>
 
-    <div class="col-12 col-sm">
+    <div class="col-12 col-md">
+      <i class="fa fa-heart fa-4x icon"></i>
       <h3>Make-It-Your-Own Recipes</h3>
-      <p>Each video includes techniques to subtly modify the meal's taste profile, resulting in almost limitless variations!</p>
+      <p>Lessons include techniques to modify the meal's taste profile, for almost limitless variations!</p>
+      <br /><br />
     </div>
 
-    <div class="col-12 col-sm">
+    <div class="col-12 col-md">
+      <i class="fa fa-hourglass-half fa-4x icon"></i>
       <h3>Yours Forever</h3>
       <p>Once purchased, your videos are yours to keep and rewatch any time you desire.</p>
+      <br /><br />
     </div>
   </div>
