--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -21,7 +21,7 @@
 
 
     <video id="my-video" class="video-js vjs-big-play-centered vjs-fluid" controls preload="auto"
-    poster="<%= image_path('egusi_soup.jpg') %>" data-setup="{}">
+    poster="<%= image_path('black.jpg') %>" data-setup="{}">
       
       <source src="<%= current_lesson.video.to_s %>" type='video/mp4'>
       
