Tweak 'Sign In to Enroll' button

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -46,7 +46,7 @@
         
         <% else %>
           
-          <h3 class="btn btn-info">Sign In To Enroll!</h3>
+          <h3 class="btn btn-info">Sign In<br /> To Enroll!</h3>
 
         <% end %>
 
