--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse right-align" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-md-0">
             <li class="nav-item">
-              <%= link_to 'See all Courses', courses_path, class: 'nav-link' %>
+              <%= link_to 'View all Courses', courses_path, class: 'nav-link' %>
             </li>
           </ul>
           
@@ -102,6 +102,8 @@
           </div>
         </div>
       </div>
+      <br />
+      <br />
     </div>
 
 
