--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,7 +10,7 @@
     
     <br />
     
-    <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
+    <%= link_to 'Learn More', courses_path, class: 'btn btn-lg btn-success' %>
   </div>
 </div>
 
@@ -47,7 +47,7 @@
       Yours Forever
     </h3>
     <p>
-      Once purchased, your videos are yours to keep and rewatch any time you desire.
+      Once purchased, your courses are yours to keep and retake any time you wish.
     </p>
     
     <br />
