--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,7 +3,7 @@
   <h1 class="text-center"><%= @course.title %></h1>
   <br />
   
-  <div class="text-center">
+  <div>
     <% if @course.image.present? %>
       <%= image_tag @course.image, class: 'img-fluid' %>
     <% end %>
@@ -13,7 +13,7 @@
     
   <div class="col-10 offset-1">
     <div class="row">  
-      <div class="col-12 col-sm-2">  
+      <div class="col-12 col-lg-2">  
         <h5>
           <span class="badge badge-success">
             COST: <%= number_to_currency @course.cost %>
@@ -52,7 +52,7 @@
         <% end %>
       </div>
         
-      <div class="col-12 col-sm-10">
+      <div class="col-12 col-lg-10">
         <%= @course.description %>
         <br /><br />
         <strong>COURSE INSTRUCTOR: <%= @course.user.fullname %></strong>
