--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,11 +1,11 @@
 <div class="booyah-box col-10 offset-1">
   <div class="row">
-    <div class="col-12 col-md-10 offset-1">
+    <div class="col-12 col-md-11">
       <h1 class="text-center">Hello <%= current_user.fullname %>!</h1>
     </div>
     
-    <div class="col-12 col-md-1">
-      <%= link_to 'Edit Your Profile', edit_user_registration_path, class: 'btn btn-primary btn-sm float-right profile-btn' %>
+    <div class="col-12 col-md-1 text-center">
+      <%= link_to 'Edit Your Profile', edit_user_registration_path, class: 'btn btn-primary btn-sm profile-btn' %>
       <br class="clr" />
     </div>
   </div>
@@ -17,26 +17,18 @@
   
   <% if current_user.enrolled_courses.empty? %>
     <br /><br />
-    <p class="text-center">Not enrolled in any courses - <%= link_to courses_path do %> why not enroll now?<% end %></p>
+    <p>
+      You're not enrolled in any courses - <%= link_to courses_path do %> why not enroll now?<% end %>
+    </p>
   <% else %>
-    <% current_user.enrolled_courses.each do |course| %>
-      <h3 class="text-center"><%= link_to course.title, course_path(course) %></h3>
-      <br />
-      <%= image_tag course.image, class: 'col-10 offset-1 img-fluid' %>
+    <div class="col-12 col-lg-4">
       <br /><br />
-
-      <div class="col-10 offset-1">
-        <div class="row">
-          <div class="col-12 col-sm-10"> 
-            <p><%= course.description %></p>
-          </div>
-    
-          <div class="col-12 col-sm-2">
-            <%= link_to 'More Info', course_path(course), class: 'btn btn-md btn-primary' %>
-          </div>
-        </div>
-      </div>
-    <% end %>
+      <% current_user.enrolled_courses.each do |course| %>
+        <%= image_tag course.image, class: 'img-fluid' %>
+        <br /><br />
+        <h3 class="text-center"><%= link_to course.title, course_path(course) %></h3>
+      <% end %>
+    </div>
   <% end %>
 
   <br class="clr" />
@@ -47,29 +39,18 @@
 
   <% if current_user.courses.empty? %>
     <br /><br />
-    <p class="text-center">
-      Not teaching any courses - <%= link_to new_instructor_course_path do %> why not create a course now?<% end %>
+    <p>
+      You're not teaching any courses - <%= link_to new_instructor_course_path do %> why not create a course now?<% end %>
     </p>
-    
   <% else %>
-    <% current_user.courses.each do |course| %>
-      <h3 class="text-center"><%= link_to course.title, course_path(course) %></h3>
-      <br />
-      
-      <%= image_tag course.image, class: 'col-10 offset-1 img-fluid' %>
+    <div class="col-12 col-lg-4">
       <br /><br />
+      <% current_user.courses.each do |course| %>
+        <%= image_tag course.image, class: 'img-fluid' %>
+        <br /><br />
 
-      <div class="col-10 offset-1">
-        <div class="row">
-          <div class="col-12 col-sm-10">
-            <p><%= course.description %></p>
-          </div>
-    
-          <div class="col-12 col-sm-2">
-            <%= link_to 'More Info', course_path(course), class: 'btn btn-md btn-primary' %>
-          </div>
-        </div>
-      </div>
-    <% end %>
+        <h3 class="text-center"><%= link_to course.title, course_path(course) %></h3>
+      <% end %>
+    </div>
   <% end %>  
 </div>
