--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
         <div class="row text-center footer-cont">
         
           <div class="col-12 col-sm">
-            <h4>Instructors</h4>
+            <h4 class="footer-title">Instructors</h4>
             <%= link_to 'Teach A Course', new_instructor_course_path %>
             
             <br />
@@ -80,14 +80,14 @@
           </div>
 
           <div class="col-12 col-sm">
-            <h4>Contact</h4>
+            <h4 class="footer-title">Contact</h4>
             info@nowyoucook.com
             <br />
             Silver Spring MD, 20904
           </div>
 
           <div class="col-12 col-sm social">
-            <h4>Social</h4>
+            <h4 class="footer-title">Social</h4>
             <%= link_to 'https://github.com/msarit',target: '_blank' do%>
               <span class="fa fa-github fa-2x social-button"></span>
             <% end %>
