--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="booyah-box col-10 offset-1">
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 style="margin-bottom: 20px;">Edit My Details</h2>
+<%#= resource_name.to_s.humanize %>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -21,7 +22,7 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3 style="margin-top: 30px;">Cancel my account</h3>
 
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
