Look good on mobile

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -168,6 +168,10 @@ ul .header .fa {
   text-align: center;
 }
 
+.send-right {
+  text-align: right;
+}
+
 
 @media (max-width: 576px) {
   .logofont {
